# licemage

./: .gitignore  Cargo.toml  README.md  bumpver.toml
src/: clidef.rs  formatters.rs  licences.rs  main.rs  pkgcache.rs  rfs.rs
src/formatters/: csvfmt.rs  stdfmt.rs  txtfmt.rs  yamlfmt.rs
src/licences/: cpritf.rs  debcpr.rs
src/pkgcache/: cacheitf.rs  debget.rs
src/rfs/: rfsdeb.rs  rfsitf.rs  rfsrpm.rs  rfstype.rs
