[package]
name = "licemage"
version = "0.3.1"
edition = "2021"

[dependencies]
askalono = { version = "0.4.6", features = ["gzip", "flate2"] }
clap = { version = "4.5.4", features = ["unicode"] }
colored = "2.1.0"
lazy_static = { version = "1.4.0", features = ["spin"] }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.4"
rs-release = "0.1.9"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
